2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>

        * gnome-network-preferences.c : Changed the help file link
          to get the help document from user-guide.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* gnome-network-preferences.c (cb_dialog_response) : Improve handling
	  of help failures.

Sun May 26 11:45:26 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-network-preferences.c (main): use APPID instead of argv[0]

2002-05-15  Mark McLoughlin <mark@skynet.ie>

	* gnome-network-preferences.c (setup_dialog): kill workaround
	libglade bug that has since been fixed.

2002-05-08  Jody Goldberg <jody@gnome.org>

	* gnome-network-preferences.glade : add help.

	* gnome-network-preferences.c (cb_dialog_response) : fix help.
