@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=Network
-_Comment=Network Preferences
+_Name=Network Proxy
+_Comment=Network Proxy Preferences
 Exec=gnome-network-preferences
 Icon=gnome-globe.png
 Terminal=0
