@@ -1,3 +1,9 @@
+2002-07-10  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=85929
+	* gnome-network-preferences.c (extract_proxy_host) : validate.
+	  This is not the prettiest way to do this, but it is effective.
+
 2002-06-17  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.0.0
